Fix #93: "Copy" click effects hidden under thumb image
Raised z-index of copyMe and puff styles

--- a/css/newsclip.css
+++ b/css/newsclip.css
@@ -350,6 +350,7 @@ hr {
     box-shadow: 0 0 0 0 rgba(0, 0, 0, .8);
     outline: 0;
     transition: box-shadow 0.0s;
+    z-index: 1;
 }
 
 .puff:focus {
@@ -359,6 +360,7 @@ hr {
 
 .copyMe {
     position: relative;
+    z-index: 1;
 }
 
 .copyMe:after {
